Attempt to fix home layout on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -32,3 +32,20 @@
     /* backdrop-filter: blur(20px); */
     cursor: pointer;
 }
+
+
+@media only screen and (max-width:1000px) {
+    #multi-tab {
+        position: fixed;
+        left: 20vw;
+        width: 75vw;
+        height: 100vh;
+        top: 0;
+        margin: 0;
+        padding: 0;
+        /* overflow: hidden; */
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+}
